Fix wrapped text in sidenav appearing wrongly (#33)

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -127,6 +127,7 @@ pre {
   padding: 0.25rem 0.5rem 0.25rem 0;
   font-weight: $headings-font-weight;
   font-size: $font-size-base;
+  text-align: left;
   text-transform: uppercase;
   color: $body-color;
   background-color: transparent;
